Correctly exclude attribute class from section align

--- a/src/styles/newrules/item-sheet.scss
+++ b/src/styles/newrules/item-sheet.scss
@@ -113,6 +113,12 @@
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
+
+      & > div:last-child:not(.attribute) {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+      }
     }
 
     &.dl-column-flex {
